<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/tv_sign_up_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_SingUp_nickname"
        android:textColor="@color/colorErrorRed"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_sign_up_nickname"
        app:layout_constraintStart_toStartOf="@+id/ed_sign_up_nickname" />


    <TextView
        android:id="@+id/tv_sign_up_nickname_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_SingUp_nickname_check"
        android:textColor="@color/colorErrorRed"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ed_sign_up_nickname"
        app:layout_constraintStart_toStartOf="@+id/ed_sign_up_nickname" />

    <EditText
        android:id="@+id/ed_sign_up_nickname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/edSignUpNickname"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_sign_up_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tvSignUpID"
        android:textColor="@color/colorErrorRed"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_sign_up_ID"
        app:layout_constraintStart_toStartOf="@+id/ed_sign_up_ID" />

    <TextView
        android:id="@+id/tv_sign_up_ID_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tvSignUpID_Error"
        android:textColor="@color/colorErrorRed"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ed_sign_up_ID"
        app:layout_constraintStart_toStartOf="@+id/ed_sign_up_ID" />


    <EditText
        android:id="@+id/ed_sign_up_ID"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/edSignInID"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_sign_up_nickname" />

    <TextView
        android:id="@+id/tv_sign_up_PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tvSignInPW"
        android:textColor="@color/colorErrorRed"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_sign_up_PW"
        app:layout_constraintStart_toStartOf="@+id/ed_sign_up_PW" />


    <TextView
        android:id="@+id/tv_sign_up_PW_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:text="@string/tvSignInPWError"
        android:textColor="@color/colorErrorRed"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_sign_up_PW"
        app:layout_constraintStart_toStartOf="@+id/ed_sign_up_PW" />

    <EditText
        android:id="@+id/ed_sign_up_PW"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/edSignInPW"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_sign_up_ID" />

    <Button
        android:id="@+id/btn_sign_up_Confirm"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_margin="20sp"
        android:background="@drawable/togglebtn_round"
        android:text="@string/btn_SignIn"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_sign_up_PW" />

</androidx.constraintlayout.widget.ConstraintLayout>